force-app/main/default/objects/Subcontractor_Link__c/Subcontractor_Link__c.object-meta.xml
<CustomObject>
    <label>Subcontractor Link</label>
    <nameField>
        <displayFormat>SubConLink-{0000000000}</displayFormat>
        <label>Subcontractor Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subcontractor Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>