force-app/main/default/objects/Subcontractor_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Subcontractor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subcontractor Links</relationshipLabel>
    <relationshipName>Subcontractor_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>