force-app/main/default/objects/Subcontractor_Link__c/fields/Bid_Price_Received_from_Sub__c.field-meta.xml
<CustomField>
    <fullName>Bid_Price_Received_from_Sub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Price Received from Sub</label>
    <type>Checkbox</type>
</CustomField>