force-app/main/default/objects/Subcontractor_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subcontractor Links</relationshipLabel>
    <relationshipName>Subcontractor_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>