force-app/main/default/objects/Subcontractor_Link__c/fields/RFP_sent_to_Sub__c.field-meta.xml
<CustomField>
    <fullName>RFP_sent_to_Sub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP sent to Sub</label>
    <type>Checkbox</type>
</CustomField>