force-app/main/default/objects/Subcontractor_Link__c/fields/Specialtys__c.field-meta.xml
<CustomField>
    <fullName>Specialtys__c</fullName>
    <label>Specialty(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subcontractor_Specialties</valueSetName>
    </valueSet>
</CustomField>