force-app/main/default/objects/Subcontractor_Link__c/fields/Subcontractor_Quote__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Quote__c</fullName>
    <label>Subcontractor Quote</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>